# tc2artnet

./: CMakeLists.txt  README.md
3rd/libltc/lib/Debug/: ltc.lib
3rd/libltc/lib/RelWithDebInfo/: ltc.lib
3rd/libltc/lib/Release/: ltc.lib
src/: ltcdecoder.cpp  ltcdecoder.h  mtcreceiver.cpp  mtcreceiver.h  tc2artnet.cpp
